css cleanup, useless classes cleanup

--- a/views/About.ejs
+++ b/views/About.ejs
@@ -49,7 +49,7 @@
       </div>
   
       <div id="bio" class="tab col-9" style="display: none;">
-        <section class="bio-section">
+        <section>
             <!--<div class="section-heading mt-3">
                 <h2>Maral Abkarian</h2>
             </div>-->
@@ -103,7 +103,7 @@
       <div id="blog" class="tab col-9">
         <section class="blog-section">
             <script src="/scripts/blog/infiniteBlogs.js"></script>
-            <div class="container container-blogx">
+            <div class="container container-blog">
               <div class="col-10 offset-1 wrapper" id="container-blog">
                 <% if(locals.blogs){ %>
                   <% Object.keys(locals.blogs).forEach(function (index) { %>
