--- a/views/Resetpw.ejs
+++ b/views/Resetpw.ejs
@@ -2,7 +2,7 @@
 
 <div class="container" style="position: sticky;"> 
       <form class="resetpw form-slider col-4 offset-4 mt-5" id="resetpw" method="POST" action="/api/user/resetpw">
-        <h1 class="form-title mb-5">Changement de mot de passe</h1>
+        <h1 class="single-title mb-5">Changement de mot de passe</h1>
 
         <input placeholder="Mot de passe" type="password" id="password" name="password" onkeyup="Validate.Password(this);" required>
         <span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to be atleast alphanumeric</span>
