--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -1,8 +1,8 @@
 <% include ../partials/head %>
 
 <div class="container container-single"> 
-    <div class="single-wrapper single-form-wrapper col-8 offset-2">
-        <h1 class="form-title">Rédiger un post de blog</h1>
+    <div class="single-wrapper col-8 offset-2">
+        <h1 class="single-title">Rédiger un post de blog</h1>
         <form class="col-8 offset-2" id="blog" method="POST" action="/api/blog/" enctype="multipart/form-data">
             <hr /> 
             <div class="form-group">
