--- a/views/restricted/Front-post.ejs
+++ b/views/restricted/Front-post.ejs
@@ -2,7 +2,7 @@
 
 <div class="container container-single"> 
     <div class="single-wrapper col-8 offset-2">
-        <h1 class="form-title">Modifier les images de l'accueil</h1>
+        <h1 class="single-title">Modifier les images de l'accueil</h1>
         <h5 class="text-center" style="color: var(--light-shade-p1)">*Pensez à utiliser des images au format paysage...</h5>
         <% if (locals.front) { %>
             <% for (var index = 0; index < 5; index++) { %>
