--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -3,8 +3,8 @@
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
 <div class="container container-single"> 
-    <div class="single-wrapper single-form-wrapper col-8 offset-2">
-        <h1 class="form-title">Ajouter une image à la galerie</h1>
+    <div class="single-wrapper col-8 offset-2">
+        <h1 class="single-title">Ajouter une image à la galerie</h1>
         <form class="col-8 offset-2" id="gallery" method="POST" action="/api/gallery/post" enctype="multipart/form-data" onsubmit="postGallery(event);">
             <hr /> 
             <div class="form-group">
