--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -1,8 +1,8 @@
 <% include ../partials/head %>
 
 <div class="container container-single"> 
-    <div class="single-wrapper single-form-wrapper col-8 offset-2">
-        <h1 class="form-title">Ajouter un item à la boutique</h1>
+    <div class="single-wrapper col-8 offset-2">
+        <h1 class="single-title">Ajouter un item à la boutique</h1>
         <form class="col-8 offset-2" id="shop" method="POST" action="/api/shop/post" enctype="multipart/form-data" onsubmit="postShop(event);">
             <hr /> 
             <div class="form-group">
