--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -54,7 +54,6 @@
         <a href="/User">ici</a> pour modifier ces informations
       </h6>
     </div>
-    <div class="panel panel-primary">
       <div class="row">
         <div class="col-md-6">
           <label class="control-label">Nom</label>
@@ -85,7 +84,7 @@
           >
         </div>
       </div>
-      <div class="panel-body">
+      <div>
         <label class="control-label">Adresse</label>
         <input
           id="autocomplete"
@@ -170,7 +169,6 @@
             </div>
           </div>
         </div>
-      </div>
     </div>
     <% } %>
   </div>
