--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small">
+<footer>
   <div class="footer-links col-md-12 mb-md-0">
     <ul class="footer-list">
       <li>
