--- a/views/restricted/Gallery-patch.ejs
+++ b/views/restricted/Gallery-patch.ejs
@@ -3,8 +3,8 @@
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
 <div class="container container-single"> 
-    <div class="single-wrapper single-form-wrapper col-8 offset-2">
-        <h1 class="form-title">Modifier un item de la galerie</h1>
+    <div class="single-wrapper col-8 offset-2">
+        <h1 class="single-title">Modifier un item de la galerie</h1>
         <form class="col-8 offset-2" id="gallery" method="POST" action="/api/gallery/patch/<%= locals.gallery._id %>" enctype="multipart/form-data" onsubmit="patchGallery(event, '<%= locals.gallery._id %>');"> 
             <hr />
             <div class="form-group">
