--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -1,8 +1,8 @@
 <% include ../partials/head %>
 
 <div class="container container-single"> 
-    <div class="single-wrapper single-form-wrapper col-8 offset-2">
-        <h1 class="form-title">Modifier un item de la boutique</h1>
+    <div class="single-wrapper col-8 offset-2">
+        <h1 class="single-title">Modifier un item de la boutique</h1>
         <form class="col-8 offset-2" id="shop" method="POST" action="/api/shop/patch/<%= locals.shop._id %>" enctype="multipart/form-data" onsubmit="patchShop(event, '<%= locals.shop._id %>');"> 
             <hr />
             <div class="form-group">
