--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -164,8 +164,8 @@
                 placeholder="Door code or other useful informations..."
                 readonly
               >
-<% if (locals.order.instructions) { %><%= locals.order.instructions %><% } %></textarea
-              >
+                <% if (locals.order.instructions) { %><%= locals.order.instructions %><% } %>
+              </textarea>
             </div>
           </div>
         </div>
