--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -28,6 +28,7 @@
     ></script>
     <!-- CUSTOM -->
     <link rel="stylesheet" href="/style.css" />
+    <script src="/scripts/tools.js"></script>
     <script src="/scripts/alert.js"></script>
   </head>
 
