--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -56,13 +56,18 @@
     <% } %>
 </div>
   
-<script src="/scripts/blog/blogScripts.js"></script>
-<script src="/scripts/frontValidation.js"></script>
-<script src="/scripts/formFocus.js"></script>
-<% include ../partials/footer %>
-
 <a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
     <img id="expandImg" src="/api/image/<%= locals.img[0]._id %>"> 
   </div>
 </a>
+
+<script>
+  $('#carousel-thumb').on('slide.bs.carousel', function (element) {
+    $("div.thumbnail-wrapper.mb-3 > ol > li.active").removeClass("active");
+    $(`div.thumbnail-wrapper.mb-3 > ol > li:nth-child(${element.to + 1})`).addClass("active");
+  })
+</script>
+<script src="/scripts/blog/blogScripts.js"></script>
+<script src="/scripts/frontValidation.js"></script>
+<% include ../partials/footer %>
