--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -18,8 +18,8 @@
             </div>
 
             <div class="form-group text-center">
-                <label for="img" id="imglabel" class="filebtn">Choisir une image</label>
-                <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)">
+                <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
+                <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple>
             </div>
 
             <input type="submit" class="logbtn" value="Valider" id="submit-blog">
