--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -20,12 +20,12 @@
             <div class="form-group">
                 <div class="form-group text-center">
                     <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
-                    <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)">
+                    <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple>
                 </div>
                 <% if (locals.img) { %>
                     <% locals.img.forEach(function (item) { %>
-                        <img class="w-100" id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
-                        <div id="actDiv<%= item._id %>" class="action-div">
+                        <img class="w-100 m-1" id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
+                        <div id="actDiv<%= item._id %>" class="action-div" <% if (item.isMain === true) { %>style="display:none"<% } %>>
                             <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="http://localhost:8089/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
                             <a id="sel<%= item._id %>" class="select-main" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Blog/<%= locals.blogContent.id %>/<%= item._id %>" <% if (item.isMain === true) { %>style="display:none"<% } %>><i class="fas fa-star"></i></a>
                         </div>
