--- a/public/style.css
+++ b/public/style.css
@@ -71,6 +71,15 @@
   font-family: "Montserrat", sans-serif;
 }
 
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 ::-webkit-scrollbar {
   width: 0px; /* Remove scrollbar space */
   background: transparent; /* Optional: just make scrollbar invisible */
@@ -1683,6 +1692,12 @@ tr:hover {
 /* END NEW USER PAGE*/
 
 /* SINGLE SHOP */
+.sku-item {
+  padding: 2em; 
+  border: 1px solid red; 
+  background-color: white;
+}
+
 .tab-btn {
   padding: 10px 15px;
   width: 200px;
