--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -27,6 +27,26 @@
                 <input type="checkbox" name="isUnique" id="isUnique">
             </div>
 
+            <!-- check image data, then display all available pwinty options -->
+            <!--
+            <div class="pwinty-products">
+                <div class="form-group text-center">
+                    <label for="sku">
+                        <div class="sku-item unselectable">
+                            <p>Type of product</p>
+                            <input name="sku" id="sku" value="sku" type="checkbox">
+                        </div>
+                    </label>
+
+                    <label for="sku2">
+                        <div class="sku-item unselectable">
+                            <p>Type of product</p>
+                            <input name="sku2" id="sku2" value="sku2" type="checkbox">
+                        </div>
+                    </label>
+                </div>
+            </div>-->
+           
             <div class="form-group text-center">
                 <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
                 <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple required>
