working on product category selection, then subcategory selection then attributes selection for said subcategory of said category

--- a/public/style.css
+++ b/public/style.css
@@ -85,7 +85,7 @@
   background: transparent; /* Optional: just make scrollbar invisible */
 }
 
-input[type=checkbox]
+input[type=checkbox], input[type=radio]
 {
   /* Double-sized Checkboxes */
   -ms-transform: scale(2); /* IE */
