--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -58,19 +58,22 @@
                         <label for="framed">
                             <div class="sku-item unselectable">
                                 <p>Framed Print</p>
-                                <input name="framed" id="framed" value="framed" type="checkbox" onclick="loadCategory(this)">
+                                <input name="pwinty-category" id="framed" value="framed" type="radio" onclick="loadCategory(this)">
                             </div>
                         </label>
     
                         <label for="mounted">
                             <div class="sku-item unselectable">
                                 <p>Mounted Print</p>
-                                <input name="mounted" id="mounted" value="mounted" type="checkbox" onclick="loadCategory(this)">
+                                <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)">
                             </div>
                         </label>
 
                     </div>
                     <div id="subcategories">
+
+                    </div>
+                    <div id="attributes">
 
                     </div>
                     <!--<b class="card-price"><%= locals.shopItem.price %>€</b>-->
