added key values pairs with correct values, changed subcategories key name

--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -58,14 +58,14 @@
                         <label for="framed">
                             <div class="sku-item unselectable">
                                 <p>Framed Print</p>
-                                <input name="pwinty-category" id="framed" value="framed" type="radio" onclick="loadCategory(this)">
+                                <input name="pwinty-category" id="framed" value="FRA" type="radio" onclick="loadCategory(this)">
                             </div>
                         </label>
     
                         <label for="mounted">
                             <div class="sku-item unselectable">
                                 <p>Mounted Print</p>
-                                <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)">
+                                <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)"><!-- needs change -->
                             </div>
                         </label>
 
