--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -79,8 +79,13 @@
                     <!--<b class="card-price"><%= locals.shopItem.price %>€</b>-->
                 <% if (locals.shopItem.isUnique) { %>
                     <b class="isUnique" style="color: var(--light-shade)">Toile unique</b>
+                    <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.shopItem._id %>', this)" disabled>
+                <% } else { %>
+                    <div id="purchasebox" style="display: none;">
+                        <span id="price" style="color: white;"></span>
+                        <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.shopItem._id %>', this)" disabled><!-- hide if sku and attributes not selected -->
+                    </div>
                 <% } %>
-                <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.shopItem._id %>', this)" disabled><!-- hide if sku and attributes not selected -->
             </div>
         </div>
     <% } %>
