--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -52,41 +52,40 @@
             <p class="blog-content col-10 offset-1 mt-2"><%= locals.shopItem.content %></p>
 
             <div class="col-10 offset-1 text-center">
-                <div class="pwinty-products">
-                    <div class="form-group text-center" id="categories">
-
-                        <label for="framed">
-                            <div class="sku-item unselectable">
-                                <p>Framed Print</p>
-                                <input name="pwinty-category" id="framed" value="FRA" type="radio" onclick="loadCategory(this)">
-                            </div>
-                        </label>
-    
-                        <label for="mounted">
-                            <div class="sku-item unselectable">
-                                <p>Mounted Print</p>
-                                <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)"><!-- needs change -->
-                            </div>
-                        </label>
-
-                    </div>
-                    <div id="subcategories">
-
-                    </div>
-                    <div id="attributes">
-
-                    </div>
-                    <!--<b class="card-price"><%= locals.shopItem.price %>€</b>-->
+               
                 <% if (locals.shopItem.isUnique) { %>
+                    <b class="card-price"><%= locals.shopItem.price %>€</b>
                     <b class="isUnique" style="color: var(--light-shade)">Toile unique</b>
                     <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.shopItem._id %>', this)" disabled>
                 <% } else { %>
+                    <div class="pwinty-products">
+                        <div class="form-group text-center" id="categories">
+    
+                            <label for="framed">
+                                <div class="sku-item unselectable">
+                                    <p>Framed Print</p>
+                                    <input name="pwinty-category" id="framed" value="FRA" type="radio" onclick="loadCategory(this)">
+                                </div>
+                            </label>
+        
+                            <label for="mounted">
+                                <div class="sku-item unselectable">
+                                    <p>Mounted Print</p>
+                                    <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)"><!-- needs change -->
+                                </div>
+                            </label>
+    
+                        </div>
+                        <div id="subcategories">
+                        </div>
+                        <div id="attributes">
+                        </div>
+                    </div>
                     <div id="purchasebox" style="display: none;">
                         <span id="price" style="color: white;"></span>
                         <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.shopItem._id %>', this)" disabled><!-- hide if sku and attributes not selected -->
                     </div>
                 <% } %>
-            </div>
         </div>
     <% } %>
   </div>
