--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -83,7 +83,7 @@
                     </div>
                     <div id="purchasebox" style="display: none;">
                         <span id="price" style="color: white;"></span>
-                        <input type="submit" class="logbtn" value="Add to cart" onclick="Pwinty.cartAdd()"><!--disabled -->
+                        <input type="submit" class="logbtn" value="Add to cart" onclick="Pwinty.cartAdd('<%= locals.shopItem._id %>', this)"><!--disabled -->
                     </div>
                 <% } %>
         </div>
