displaying unique and pwinty on /shopping-cart, mostly working, needs improvement and refactoring of cart actions

--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -26,6 +26,7 @@
             <div class="cart-title-description">
               <h4 class="cart-item-title"><b><%= locals.products[index].shorttitle %>...</b></h4>
               <p class="cart-item-description"><%= locals.products[index].shortcontent %>...</p>
+              <p><%= locals.products[index].details %></p>
             </div>
           </div>
               
