display correct unit price on /shopping-cart, display all attributes for pwinty products

--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -71,7 +71,7 @@
                             <label for="mounted">
                                 <div class="sku-item unselectable">
                                     <p>Mounted Print</p>
-                                    <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)"><!-- needs change -->
+                                    <input name="pwinty-category" id="mounted" value="mounted" type="radio" onclick="loadCategory(this)"><!-- needs change VALUE -->
                                 </div>
                             </label>
     
